<resources>
    <string name="app_name">NotifiKame</string>
    <string name="bienvenido">Welcome</string>
    <string name="mensaje">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="cedula">Please type you login here</string>
    <string name="Aceptar">Login</string>
    <string name="salir">Exit</string>
    <string name="logo_descripcion">NotifiKame</string>
    <string name="headlines">headline</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Name</string>
    <string name="dni">Code</string>
    <string name="tlf">User</string>
    <string name="email">Password</string>
    <string name="mostrar">Cancel</string>
    <string name="insertar">Register</string>

    <string-array name="Tags">
        <item>Groups</item>
        <item>Create Group</item>
        <item>Add Student to Group</item>
        <item>Create notification</item>
    </string-array>

    <string name="autorship_for_icons">
        Iconos realizados\n
        por http://www.freepik.com \n
        de www.flaticon.com\n\n
        Icono de notificación\n
        por http://www.flaticon.com/authors/google
        de www.flaticon.com
         </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hint_login">Type your Username here</string>
    <string name="hint_pass">Type your Password Here</string>
    <string name="chk_estudiante">Student</string>
    <string name="chk_profesor">Profesor</string>
    <string name="btn_registrarse">Register</string>
    <string name="grupo">Group</string>
    <string name="nombregrupo">Group Name</string>
    <string name="cod_grupo_fragment">Group code:</string>
    <string name="nombre_grupo_fragment">Group name:</string>
    <string name="add_group">Add group</string>
    <string name="add_estudiante">Add student</string>
    <string name="nombre_estudiante_fragment">Student Code</string>
    <string name="descripcion_notificacion">Description:</string>
    <string name="header_notificacion">Header:</string>
    <string name="add_notificacion">Create Notification</string>
    <string name="student_name">Code</string>
    <string name="code_student">Type the stundent code:</string>
    <string name="buscar_student">Find Stundent</string>
    <string name="cantidad_estudiantes">number_students</string>
</resources>
