<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.julian.notifikame.LoginActivity">

    <ImageView  android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/konradlogo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="354dp"
        android:contentDescription="@string/logo_descripcion">
    </ImageView>

    <RelativeLayout   android:id="@+id/layTexto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imgLogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="134dp">

        <TextView  android:id="@+id/lblBienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bienvenido"
            android:layout_gravity="center_horizontal"
            android:textSize="32sp"
            android:textColor="#0107ff"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <EditText android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:textColorHint="#CFCFCF"
            android:inputType="text"
            android:layout_above="@+id/lblPass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText android:id="@+id/lblPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:textColorHint="#CFCFCF"
            android:inputType="textPassword"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="78dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lblLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="41dp"
            android:id="@+id/linearLayout">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_estudiante"
                android:id="@+id/chk_estudiante"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_profesor"
                android:id="@+id/chk_profesor" />
        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registro"
            android:layout_above="@+id/lblBienvenido"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_registrarse"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/BarraBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle">

        <Button android:id="@+id/BtnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aceptar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button android:id="@+id/BtnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salir"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>
