<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_grupo_fragment"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cod_grupo_fragment"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/nombre_grupo_fragment"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nombre_grupo_fragment"/>

    <Button
        android:id="@+id/btn_crear_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group"
        android:layout_gravity="center" />

</LinearLayout>