<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_estudiante_fragment"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Spinner
        android:id="@+id/add_group_student_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_grupo_fragment"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Spinner
        android:id="@+id/add_group_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_agregar_estudiante"
        android:text="@string/add_estudiante"
        android:layout_gravity="center" />

</LinearLayout>