<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification_header"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_grupo_fragment"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Spinner
            android:id="@+id/crear_notificacion_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_notificacion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_header_notificacion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_notificacion"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_descripcion_notificacion"/>

        <Button
            android:id="@+id/btn_crear_notificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_notificacion"
            android:layout_gravity="center" />


    </LinearLayout>

</LinearLayout>